# threads-maze

./: .gitignore  CMakeLists.txt  README.md  test_read_file.1.c  threads-maze  threads-maze.cbp
examples/: custom-maze.c  fileRead.c  hello  hello-pthread  hello-pthread.c  makefile  matrix.c  matrix.h  maze.c  maze.txt  p_matrix_para.c  read-file  read-file-array.c  read-file-buffer.c  read-file.c  readme  test.txt
headers/: foo.h
maze/: main.c  vector.c  vector.h
pthread_examples/: dynamic_pthread.c  maze_with_threads.c  mutex_example.c
test02/: test_read_file.c
test03/: refactor_direction_maze.c  refactor_great_maze.c  refactor_maze.c  test_prntw.c  test_read_file.c
